feat: revamped content

--- a/packages/pure/components/basic/Header.astro
+++ b/packages/pure/components/basic/Header.astro
@@ -2,6 +2,14 @@
 import config from 'virtual:config'
 
 import { Icon } from '../user'
+
+const menu = config.header.menu.filter(item => 
+  item.title !== 'Docs' && 
+  item.title !== 'About' && 
+  item.title !== 'Projects' || 
+  import.meta.env.DEV
+)
+
 ---
 
 <header-component
