--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -23,7 +23,7 @@ const headings = [
   <p>Github Activities:</p>
   <p>
     <Image
-      src='https://ghchart.rshah.org/659eb9/cworld1'
+      src='https://ghchart.rshah.org/A0522D/pipitonelabs'
       alt='github activities'
       inferSize
       loading='lazy'
