fix: correcting semantic issue

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ if (!images[imagePath])
             <Icon name='github' class='size-5' slot='icon' />
           </Label>
           <Label
-						title='Connect on Linkedin'
+						title='Connect on LinkedIn'
 						as='a'
 						href='https://www.linkedin.com/in/jpipitone/'
 						target='_blank'
