--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -29,8 +29,8 @@ const headings = [
   <ul>
     <li>Spending time with my family - we love to be outdoors when the weather is nice.</li>
     <li>Creating things in the home recording studio.</li>
-    <li>Building PCs with the kids.</li>
-    <li>Constantly learning through hands-on experimentation — diving into new open-source projects, spinning up tools in my homelab, and breaking things just to figure out how they really work.</li>
+    <li>Building PCs and other projects with our kids.</li>
+    <li>Constantly learning through hands-on experimentation - diving into new open-source projects, spinning up tools in my homelab, and breaking things just to figure out how they really work.</li>
     <li>Working on cars, constantly talking about Tesla.</li>
   </ul>
 
