--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,26 +19,36 @@ const MAX_POSTS = 10
 const allPosts = await getBlogCollection()
 const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 
-const imagePath = config.logo.src
-const images = import.meta.glob<{ default: ImageMetadata }>(
-  '/src/assets/*.{jpeg,jpg,png,gif,avif,webp}'
-)
-if (!images[imagePath])
-  throw new Error(
-    `"${imagePath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif,avif,webp}"`
-  )
+//const imagePath = config.logo.src
+//const images = import.meta.glob<{ default: ImageMetadata }>(
+//  '/src/assets/*.{jpeg,jpg,png,gif,avif,webp}'
+//)
+//if (!images[imagePath])
+//  throw new Error(
+//    `"${imagePath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif,avif,webp}"`
+//  )
 
 ---
 
 <PageLayout meta={{ title: 'Home' }} highlightColor='#659EB9'>
   <main class='flex w-full flex-col items-center'>
     <section class='animate mb-10 flex flex-col items-center gap-y-7' id='content-header'>
+      {/*
       <Image
         src={images[imagePath]()}
         alt={config.logo.alt || 'Logo'}
         class='h-28 w-auto rounded-full border p-1'
-        loading='eager'
+        loading='eager' 
+      />
+      */}
+      <Image
+        src='https://gravatar.com/avatar/852046e1fb4620d1f56909b0d0bf0b8d0d640c6b79c6f629fa72a46de685c389?size=256'
+        alt='profile'
+        width={256}
+        height={256}
+        class='h-28 w-auto rounded-full border p-1'
         fetchpriority='high'
+        loading='eager'
       />
 
       <div class='flex flex-col items-center gap-y-4'>
