feat: updated index.astro with certs

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,6 +97,17 @@ if (!images[imagePath])
           I am a Cloud Engineer working on AWS, Azure, Infrastructure & Automation, and GitOps / Kubernetes.
           I like to continuously expand my knowledge using my HomeLab environment to deploy and experiment with open source technologies.
         </p>
+        <p class='text-muted-foreground'>
+          I am actively pursuing the following certifications:
+          <ul class='text-muted-foreground' style='list-style-type: disc; padding-left: 1rem;'>
+            <li>
+              AWS Certified DevOps Engineer Professional
+            </li>
+            <li>
+              AWS Certified Generative AI Developer Professional
+            </li>
+          </ul>
+        </p>
         <Button title='More about me' class='w-fit self-end' href='/about' variant='ahead' />
       </Section>
       <Section title='Education'>
